2009-07-28  Douglas B Rupp  <rupp@gnat.com>

	* dwarf2out.c (output_file_names): Test new macro
	DWARF2_DIR_SHOULD_END_WITH_SEPARATOR.
	(add_comp_dir_attribute): Likewise.

2009-07-28  Kai Tietz  <kai.tietz@onevision.com>

	* config/i386/mingw-w64.h (LINK_SPEC): Add
	separating space between commands.

2009-07-28  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/40759
	* tree-ssa-dce.c (mark_virtual_phi_result_for_renaming): Mark all uses
	for renaming.

2009-07-27  DJ Delorie  <dj@redhat.com>

	* config/mep/mep.c (mep_expand_builtin_saveregs): Make sure 64-bit
	types are dword-aligned.
	(mep_expand_va_start): Likewise.

2009-07-27  Olivier Hainque  <hainque@adacore.com>
            Douglas B Rupp  <rupp@gnat.com>

	* convert.c (convert_to_pointer): Don't assume the target
	pointer type is POINTER_SIZE long. Fetch its precision instead.

2009-07-27  Douglas B Rupp  <rupp@gnat.com>

	* system.h (fopen): Undefine if macro.

2009-07-27  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (output_cfi_p): Removed.
	(output_cfis): New function.
	(output_fde): New function, split from output_call_frame_info.
	(output_call_frame_info): Use it.
	(dwarf2out_switch_text_section): Use output_cfis.

2009-07-24  Kai Tietz  <kai.tietz@onevision.com>

	* config/i386/cygming.h (DWARF2_UNWIND_INFO): Error build when
	TARGET_BI_ARCH is specified without enabling SJLJ.
	* config/i386/mingw32.h (MD_UNWIND_SUPPORT): Define MD_UNWIND_SUPPORT,
	if TARGET_64BIT and TARGET_BI_ARCH aren't defined.

2009-07-26  Mikael Pettersson <mikpe@it.uu.se>

	* arm.md (negdi2): Use DImode if forcing a value into a register.

2009-07-26  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/40801
	* tree-vect-stmts.c (vectorizable_call): Get previous copy
	of vector operand from the previous copy of vector statement.
	Pass the correct definition type value to
	vect_get_vec_def_for_stmt_copy().

2009-07-25  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
