@@ -1,3 +1,8 @@
+2009-07-28  Paolo Bonzini  <bonzinI@gnu.org>
+
+	* tree.h (TREE_DEPRECATED): Document it is used for types too.
+	(TYPE_VECTOR_OPAQUE): Use default_def_flag
+
 2009-07-28  Douglas B Rupp  <rupp@gnat.com>
 
 	* dwarf2out.c (output_file_names): Test new macro
